@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0
skinparam classFontStyle Bold
skinparam style strictuml
hide empty members

class pumlFromJava.PumlDiagram {
}
class pumlFromJava.CreateFile {
}
class pumlFromJava.PumlWriter {
}
class pumlFromJava.FirstDoclet {
}
class pumlFromJava.PumlDoclet {
}
class pumlFromJava.Java2Puml {
}
class pumlFromJava.classes.Instance {
}
class pumlFromJava.classes.Enumerations {
}
class pumlFromJava.classes.Interface {
}
class pumlFromJava.classes.Methode {
}
class pumlFromJava.classes.Attributs {
}
class pumlFromJava.classes.Classe {
}
class pumlFromJava.PumlDiagram {
}
class pumlFromJava.CreateFile {
}
class pumlFromJava.PumlWriter {
}
class pumlFromJava.FirstDoclet {
}
class pumlFromJava.PumlDoclet {
}
class pumlFromJava.Java2Puml {
}
class pumlFromJava.Option {
- hasArg : boolean
}
interface pumlFromJava.classes.Type<<interface>> {
}

pumlFromJava.classes.Instance <|-- pumlFromJava.classes.Interface
jdk.javadoc.doclet.Doclet <|.. pumlFromJava.FirstDoclet
jdk.javadoc.doclet.Doclet <|.. pumlFromJava.PumlDoclet
pumlFromJava.PumlDoclet +.. pumlFromJava.PumlDoclet.Option
pumlFromJava.Option <|.. pumlFromJava.PumlDoclet.Option
pumlFromJava.classes.Type <|.. pumlFromJava.classes.Methode
pumlFromJava.classes.Type <|.. pumlFromJava.classes.Classe
pumlFromJava.classes.Instance <|-- pumlFromJava.classes.Classe
pumlFromJava.classes.Type <|.. pumlFromJava.classes.Attributs

pumlFromJava.PumlDoclet ..> pumlFromJava.Option : <<use>>
pumlFromJava.PumlDoclet ..> pumlFromJava.PumlDiagram : <<use>>
pumlFromJava.PumlDoclet ..> pumlFromJava.CreateFile : <<use>>
pumlFromJava.PumlDoclet ..> pumlFromJava.PumlWriter : <<use>>
pumlFromJava.PumlDoclet ..> pumlFromJava.classes.Classe : <<use>>
pumlFromJava.PumlDoclet ..> pumlFromJava.classes.Interface : <<use>>
pumlFromJava.PumlDoclet ..> pumlFromJava.classes.Enumerations : <<use>>

@enduml